--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.20.23",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "fs-extra": "9.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "solc": "^0.4.26",
+    "truffle-hdwallet-provider": "1.0.17",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2",
     "web3": "1.5.2"
@@ -22,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "compile:contracts": "cd ethereum && truffle compile",
+    "deploy:contracts": "cd ethereum && truffle migrate -f 2 --network rinkeby"
   },
   "eslintConfig": {
     "extends": [
