--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "compile:contracts": "cd ethereum && truffle compile",
-    "deploy:contracts": "cd ethereum && truffle migrate -f 2 --network rinkeby"
+    "compile:contracts": "cd src/ethereum && truffle compile",
+    "deploy:contracts": "cd src/ethereum && truffle migrate -f 2 --network rinkeby"
   },
   "eslintConfig": {
     "extends": [
